[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Fontes/city_burn/cityburn-®.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/startScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/Fontes/28_days_later/28 Days Later.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=8]
size = 127
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=7]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/styles/disabled = SubResource( 9 )
Button/styles/focus = SubResource( 10 )
Button/styles/hover = SubResource( 11 )
Button/styles/normal = SubResource( 12 )
Button/styles/pressed = SubResource( 13 )

[sub_resource type="DynamicFont" id=1]
size = 36
extra_spacing_char = 3
font_data = ExtResource( 1 )

[node name="startScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.796078 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -267.0
margin_top = 126.0
margin_right = 268.0
margin_bottom = -337.0
custom_fonts/font = SubResource( 8 )
text = "Escolhas"

[node name="controls" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -72.0
margin_top = 343.0
margin_right = 72.0
margin_bottom = -91.0

[node name="startBtn" type="Button" parent="controls"]
margin_right = 144.0
margin_bottom = 40.0
theme = SubResource( 7 )
custom_colors/font_color_hover = Color( 0.698039, 0.027451, 0.027451, 1 )
custom_colors/font_color_pressed = Color( 0.698039, 0.027451, 0.027451, 1 )
custom_fonts/font = SubResource( 1 )
text = "Iniciar"

[node name="créditosBtn" type="Button" parent="controls"]
margin_top = 44.0
margin_right = 144.0
margin_bottom = 84.0
theme = SubResource( 7 )
custom_colors/font_color_hover = Color( 0.698039, 0.027451, 0.027451, 1 )
custom_colors/font_color_pressed = Color( 0.698039, 0.027451, 0.027451, 1 )
custom_fonts/font = SubResource( 1 )
text = "Créditos"

[node name="quitBtn" type="Button" parent="controls"]
margin_top = 88.0
margin_right = 144.0
margin_bottom = 128.0
theme = SubResource( 7 )
custom_colors/font_color_hover = Color( 0.698039, 0.027451, 0.027451, 1 )
custom_colors/font_color_pressed = Color( 0.698039, 0.027451, 0.027451, 1 )
custom_fonts/font = SubResource( 1 )
text = "Sair"

[connection signal="pressed" from="controls/startBtn" to="." method="_on_startBtn_pressed"]
[connection signal="pressed" from="controls/créditosBtn" to="." method="_on_crditosBtn_pressed"]
[connection signal="pressed" from="controls/quitBtn" to="." method="_on_quitBtn_pressed"]
